working on output bug

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,4 +6,37 @@ html, body {
   padding: 0;
   height: 100%;
   width: 100%;
+  background-color: #252422;
+}
+
+.jumbotron {
+  background-color: #403D39;
+  color: #CCC5B9;
+  text-align: center;
+}
+h1 {
+  font-family: 'Fascinate';
+  color: #EB5E28;
+}
+span {
+  display: block;
+}
+.row {
+  margin: auto;
+  justify-content: space-evenly;
+}
+
+.card {
+  background-color: #A53F2B;
+  color: #F0FFCE;
+  }
+
+.card-body{
+  /* background-color: brown; */
+  
+  height: fit-content;
+  word-wrap: break-word;
+  width: fixed;
+  vertical-align:middle;
+  /* outline-style: solid; */
 }
