update index.html with additional user instructions

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,7 +29,11 @@ span {
 .card {
   background-color: #A53F2B;
   color: #F0FFCE;
-  }
+}
+
+.row2 {
+  padding-top: 20px;
+}
 
 .card-body{
   /* background-color: brown; */
